Update script tag to include version query parameter

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <canvas id="confetti-canvas"></canvas>
 
-<script src="nfcgame.js"></script>
+<script src="nfcgame.js?v=2"></script>
 
 </body>
 </html>
