Update page title for NFC Game to new event

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>NFC Game</title>
+  <title>Texas A&amp;M Innovation - White Elephant 2025</title>
   <link rel="stylesheet" href="nfccss.css">
 </head>
 <body>
