--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Texas A&amp;M Innovation - White Elephant 2025</title>
-  <link rel="stylesheet" href="nfccss.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Texas A&amp;M Innovation - White Elephant 2025</title>
+
+<link rel="stylesheet" href="nfccss.css" />
+<script src="nfcgame.js" defer></script>
+
+<!-- Confetti library -->
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
+
 <body>
+  <div id="main">
+    <iframe id="resultVideo" class="embedVideo" style="display:none;"></iframe>
 
-<div id="main">
-  <div id="message"></div>
-</div>
+    <div id="message"></div>
 
-<canvas id="confetti-canvas"></canvas>
+    <div id="countdown"></div>
 
-<script src="nfcgame.js"></script>
-
+    <button id="revealBtn" class="reveal-btn">Reveal Result</button>
+  </div>
 </body>
 </html>
