--- a/index.html
+++ b/index.html
@@ -1,38 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Texas A&amp;M Innovation - White Elephant 2025</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Texas A&M Innovation - White Elephant 2025</title>
 
-<!-- LINK TO YOUR EXISTING UPLOADED FILES (DO NOT CHANGE) -->
 <link rel="stylesheet" href="nfccss.css">
 <script defer src="nfcgame.js"></script>
 
-<!-- YOUTUBE FRAME (loads with audio only, no extra sounds) -->
-<iframe
-  id="ytFrame"
-  style="border:none;position:fixed;top:0;left:0;width:100%;height:40vh;z-index:10;"
-  allow="autoplay; encrypted-media; picture-in-picture"
-  allowfullscreen
-></iframe>
+<!-- Confetti Library for Winner -->
+<script defer src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
-<main style="display:flex;flex-direction:column;height:100vh;justify-content:center;align-items:center;">
-  <div id="revealed-content" style="width:100%;display:flex;flex-direction:column;align-items:center;justify-content:center;"></div>
+</head>
+<body>
 
-  <!-- PLAY VIDEO BUTTON SHOULD BE THE ONLY BUTTON ON PAGE LOAD -->
-  <button id="playVideo">▶ Play Video</button>
+<div id="main">
 
-  <!-- REVEAL BUTTON WILL APPEAR LATER FROM JS AFTER VIDEO STARTS PLAYING -->
-  <div id="reveal-container"></div>
+  <!-- Initial UI shown on page load -->
+  <div id="message">
+    <div id="tag-id-display" class="smallTag">Tag not scanned yet...</div>
+    <button id="playVideoBtn" class="bigPlay">🎬 Play Video</button>
+    <button id="revealBtn" class="reveal">Reveal Result</button>
+  </div>
 
-  <!-- RESULTS (hidden until reveal) -->
-  <div id="resultTag"></div>
-  <div id="resultIcon"></div>
-  <div id="resultLabel"></div>
-  <div id="countdown"></div>
-  <canvas id="confetti-canvas"></canvas>
-</main>
+</div>
+
+<script>
+  // Force Play Video button to work
+  document.getElementById("playVideoBtn").addEventListener("click", function() {
+    const winners = ["00", "14", "22", "31"];
+    const awardTag = "40"; // <-- ONE Grand Prize Tag you assign manually
+    const tagParams = new URLSearchParams(window.location.search);
+    const tag = tagParams.get("tag");
+
+    if (!tag) {
+      alert("No tag in URL. Example: /?tag=00");
+      return;
+    }
+
+    // Always show tag number
+    document.getElementById("tag-id-display").innerText = `Tag Number ${tag}`;
+
+    // Load a video (switch these IDs to your real ones)
+    let videoID = "KS5ea__5l33wWZ9w"; // <-- default video for normal tags
+    if (winners.includes(tag)) videoID = "tSv04ylc6To"; // <-- winner video ID
+    if (tag === awardTag) videoID = "OItP8-_mjXw"; // <-- major award video ID
+
+    // Inject full working YouTube embed
+    document.getElementById("main").innerHTML = `
+        <div id="videoContainer">
+          <iframe
+            id="ytplayer"
+            src="https://www.youtube.com/embed/${videoID}?autoplay=1&mute=0&playsinline=1"
+            frameborder="0"
+            allow="autoplay; encrypted-media; picture-in-picture"
+            style="width:100vw;height:56vh;border-radius:0 0 20px 20px;">
+          </iframe>
+        </div>
+    `;
+
+    // Show reveal result button after 2 seconds
+    setTimeout(() => {
+      document.getElementById("revealBtn").style.display = "block";
+    }, 2000);
+  });
+</script>
 
 </body>
 </html>
