Update input field and button styles in manual.html

--- a/manual.html
+++ b/manual.html
@@ -5,6 +5,19 @@
   <title>NFC Game – Manual Entry</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="nfccss.css" />
+
+  <style>
+    /* Remove number input arrows on mobile & desktop */
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+    input[type="number"] {
+      appearance: textfield;
+      -moz-appearance: textfield;
+    }
+  </style>
 </head>
 
 <body>
@@ -13,23 +26,22 @@
 
       <h2 style="margin-bottom: 1rem;">Enter Tag Number</h2>
 
-      <input id="tagInput" 
-             type="number" 
-             min="0" max="99"
-             placeholder="00"
-             style="font-size:1.4rem; padding:0.4rem 1rem; width:70%; text-align:center; border-radius:0.5rem;" />
+      <input id="tagInput"
+             type="number"
+             placeholder="Enter tag"
+             style="font-size:1.4rem; padding:0.6rem 1rem; width:70%; text-align:center; border-radius:0.5rem;" />
 
       <button id="revealBtn"
-              style="margin-top:1rem; font-size:1.4rem; padding:0.4rem 1.2rem; border-radius:0.5rem;">
+              style="margin-top:1rem; font-size:1.4rem; padding:0.6rem 1.2rem; border-radius:0.5rem;">
         Reveal
       </button>
 
       <hr style="margin:1.5rem 0; opacity:0.4;">
 
-      <!-- Output area identical to index.html -->
-      <div id="tag-number" class="tag-number">Waiting...</div>
-      <div id="symbol" class="symbol">?</div>
-      <div id="main-message" class="main-message">Enter a tag</div>
+      <!-- Output (empty until reveal is pressed) -->
+      <div id="tag-number" class="tag-number"></div>
+      <div id="symbol" class="symbol"></div>
+      <div id="main-message" class="main-message"></div>
       <div id="mini-row" class="mini-row"></div>
 
     </div>
