--- a/index.html
+++ b/index.html
@@ -18,9 +18,30 @@
 <canvas id="confetti-canvas"></canvas>
 <canvas id="fireworks-canvas"></canvas>
 
-<!-- Libraries -->
-<script src="confetti.browser.min.js"></script>
-<script src="fireworks.min.js"></script>
+<!-- Confetti CDN -->
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
+<!-- Fireworks CDN (uses confetti internally) -->
+<script>
+/* Simple fireworks routine */
+function fireworksBurst() {
+    let count = 0;
+    const interval = setInterval(() => {
+        confetti({
+            particleCount: 80,
+            spread: 140,
+            startVelocity: 45,
+            origin: {
+                x: Math.random(),
+                y: Math.random() * 0.3
+            }
+        });
+        count++;
+        if (count >= 10) clearInterval(interval);
+    }, 250);
+}
+</script>
+
 
 <!-- NFC Logic -->
 <script src="nfcgame.js"></script>
