--- a/manual.html
+++ b/manual.html
@@ -3,33 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NFC Game Manual Entry</title>
-    <link rel="stylesheet" href="nfccss.css">
+    <title>Manual Tag Entry</title>
+    <link rel="stylesheet" href="style.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
+
 <body>
 
-<div id="main">
-    <div class="card">
+<div class="container">
+    <h1 class="page-title">Enter Tag Number</h1>
 
-        <h1 class="title">Enter Tag Number</h1>
+    <input 
+        id="tagInput"
+        type="number"
+        inputmode="numeric"
+        placeholder="Enter Tag #"
+        class="tag-input"
+    >
 
-        <input type="number" id="manualInput" placeholder="Tag Number" min="0">
+    <button id="revealBtn" class="reveal-btn">Reveal</button>
 
-        <button id="revealBtn">Reveal Result</button>
+    <div id="manualResult" class="result-box"></div>
 
-        <div id="resultArea"></div>
-
-    </div>
+    <a class="manual-link" href="index.html">Scan NFC Instead</a>
 </div>
 
-<!-- Effects canvases -->
-<canvas id="confetti-canvas"></canvas>
-<canvas id="fireworks-canvas"></canvas>
+<script>
+const winners = [7, 13];
+const majorAward = 21;
 
-<script src="confetti.browser.min.js"></script>
-<script src="fireworks.min.js"></script>
-<script src="manual.js"></script>
+const resultBox = document.getElementById("manualResult");
+const revealBtn = document.getElementById("revealBtn");
+
+function runConfetti() {
+    confetti({
+        particleCount: 200,
+        spread: 90,
+        origin: { y: 0.6 }
+    });
+}
+
+function runFireworks() {
+    let count = 0;
+    const interval = setInterval(() => {
+        confetti({
+            particleCount: 80,
+            spread: 120,
+            startVelocity: 60,
+            origin: {
+                x: Math.random(),
+                y: Math.random() * 0.4
+            }
+        });
+        count++;
+        if (count > 10) clearInterval(interval);
+    }, 300);
+}
+
+revealBtn.addEventListener("click", () => {
+    let tagValue = document.getElementById("tagInput").value;
+
+    if (!tagValue) {
+        resultBox.innerHTML = "<p>Please enter a tag number.</p>";
+        return;
+    }
+
+    const tagNum = parseInt(tagValue);
+
+    /* Major Award */
+    if (tagNum === majorAward) {
+        resultBox.innerHTML = `
+            <div class="big-exclaim">!</div>
+            <div class="major-text">
+                Major Award!<br>
+                <small>Tag ${tagNum}</small>
+            </div>
+        `;
+        runFireworks();
+    }
+
+    /* Winner */
+    else if (winners.includes(tagNum)) {
+        resultBox.innerHTML = `
+            <div class="big-check">✔</div>
+            <div class="winner-text">
+                Winner!<br>
+                <small>Tag ${tagNum}</small>
+            </div>
+            <div class="free-steal">Free Extra Steal!</div>
+        `;
+        runConfetti();
+    }
+
+    /* Loser */
+    else {
+        resultBox.innerHTML = `
+            <div class="big-x">X</div>
+            <div class="loser-text">
+                Loser!<br>
+                <small>Tag ${tagNum}</small>
+            </div>
+            <div class="small-x">x x x</div>
+        `;
+    }
+});
+</script>
 
 </body>
 </html>
-
