Simplify index.html by removing unused elements
Removed NFC Result header and manual entry link.

--- a/index.html
+++ b/index.html
@@ -6,18 +6,14 @@
     <title>NFC Reveal</title>
     <link rel="stylesheet" href="style.css">
 
-    <!-- Confetti library -->
+    <!-- Confetti -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
+
 <body>
 
     <div class="container">
-        <h1 class="page-title">NFC Result</h1>
-        <div id="resultArea" class="result-box">
-            <p>No tag scanned yet…</p>
-        </div>
-
-        <a class="manual-link" href="manual.html">Enter Tag Manually</a>
+        <div id="resultArea" class="result-box"></div>
     </div>
 
     <script src="nfc.js"></script>
